<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cmpe277.sadp.certpinbasic.CertPinMainActivity" >

    <item
        android:id="@+id/action_cert_pin"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cert_pin"/>
    
    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_register"/>
    
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_update"/>
    
    <item
        android:id="@+id/action_view_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_view_list"/>

</menu>
