<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <Button 
        android:id="@+id/btn_create_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_user_str"/>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/red"
        android:id="@+id/linear_user_id">
        
        <TextView 
            android:text="@string/txt_user_id_str"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
	    <TextView
	        android:id="@+id/txt_user_id_created"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/red"
        android:id="@+id/linear_user_pw">
        
        <TextView 
            android:text="@string/txt_user_pw_str"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
	    <TextView
	        android:id="@+id/txt_user_pw_created"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
    

    <Button 
        android:id="@+id/btn_get_token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_tkn_str"
        android:visibility="visible" />
    
    <LinearLayout 
        android:id="@+id/linear_user_token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/red"
        android:visibility="visible">
        
        <TextView 
            android:text="@string/txt_user_token_str"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
	    <TextView
	        android:id="@+id/txt_user_token_created"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>


</LinearLayout>
